# streamcontroller-python-elgato-streamdeck

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/: example_basic_grid.py
src/StreamDeck/: DeviceManager.py  ProductIDs.py
src/StreamDeck/Devices/: AjazzAKP03E.py  Mirabox293S.py  MiraboxN3.py  MiraboxN4.py  MiraboxN4Pro.py  StreamDeck.py  StreamDeckNeo.py  StreamDeckPlus.py  StreamDeckPlusXL.py
src/StreamDeck/Transport/: LibUSBHIDAPI.py  Transport.py
